--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+#app{
+  min-height: 99vh;
+  width: 99vw;
+  background-color: rgb(103, 103, 145, 0.5);
+}
+
+#header{
+  height: 45px;
+  width: 100vw;
+  background-color: black;
+  color: aliceblue;
+  text-align: center;
+  font-size: 20px;
+  line-height: 45px;
+  position: fixed;
+  top: 0%;
+}
+#form{
+  border: 1px solid black;
+  width: 70%;
+  height: 28%;
+  margin: auto;
+  margin-top: 47px;
+}
+#form h4{
+  text-align: center;
+  width: 70%;
+ font-size: 1.5rem;
+  margin: auto;
+}
+#form button{
+ padding: 5px 15px;
+ font-size: 18px;
+ border-radius: 10px;
+
+}
+#form label{
+ font-size: 1em;
+ font-weight: 600;
+ 
+ }
+#form div{
+  margin: 15px;
+  width: 90%;
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: space-around;
+}
+#form div input{
+  /* margin: 5px; */
+  padding: 5px 10px;
+  border-radius: 10px;
+  width: 80%;
+ 
+}
+
+#todotable{
+  width: 88%;
+  margin: auto;
+  /* border: 2px solid rgb(138, 126, 186); */
+  min-height: 300px;
+  overflow-y: scroll;
+  padding: 5px;
+
+ 
+  margin-top: 15px;
+  /* overflow-y: scroll;  */
+  /* overflow-x: hidden; */
+}
+
+#tabledata{
+  width: 100%;
+  /* height: 200px; */
+  overflow-y: scroll;
+  /* border: 2px solid rgb(16, 16, 16); */
+}
+#search{
+  width: 100%;
+  padding: 5px;
+  /* border: 2px solid red; */
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#search button{
+ border-radius: 10px; 
+  padding: 5px 15px;
+ 
+}
+#search input{
+  width: 50%;
+  padding: 5px 20px;
+  border-radius: 10px;
+  /* border: 2px solid red; */
+}
+#emptytodo{
+  text-align: center;
+  font-size: 20px;
+  width: 100%;
+  margin-top: 15px;
+  /* border: 1px solid black; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+#table th{
+padding: 10px;
+font-size: 20px;
+border: 1px solid rgb(37, 35, 35);
+}
+#table td{
+  padding: 10px;
+  /* font-size: 20px; */
+  border: 1px solid rgb(37, 35, 35);
+  text-align: center;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#table .name{
+  width: 150px;
+  /* border: 1px solid red; */
   }
-  to {
-    transform: rotate(360deg);
+  #table{
+    width: 100%;
+    border: 1px solid rgb(31, 30, 30);
+    border-collapse: collapse;
   }
-}
+  #table button{
+   padding: 5px 10px;
+   border-radius: 10px;
+   font-size: 14px;
+  }
