--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 *{
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 #app{
   min-height: 99vh;
   width: 99vw;
   background-color: rgb(103, 103, 145, 0.5);
+  overflow-x: hidden;
 }
 
 #header{
@@ -63,7 +65,9 @@
   margin: auto;
   /* border: 2px solid rgb(138, 126, 186); */
   min-height: 300px;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
+  /* overflow-x: hidden; */
+  overflow: hidden;
   padding: 5px;
 
  
